chore(app): naming

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Typescript setup</title>
+  <title>TS setup</title>
   <link rel="stylesheet" href="dist/bundle.css">
 </head>
 <body>
-  HTML / CSS / TS scaffolding
+  Typescript / HTML / CSS setup
   <script src="dist/bundle.js"></script>
 </body>
 </html>
