feat(map): test mappa

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-  <meta charset="UTF-8">
-  <title>TS setup</title>
-  <link rel="stylesheet" href="dist/bundle.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+    <link rel="stylesheet" href="dist/bundle.css"/>
+    <title>Earthquake map</title>
 </head>
 <body>
-  Typescript / HTML / CSS setup
-  <script src="dist/bundle.js"></script>
+<div id="map"></div>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
