--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="dist/bundle.css"/>
-    <title>Earthquake map</title>
+    <title>Typescript</title>
 </head>
 <body>
-<div id="map"></div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
