feat(app): line example

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Typescript</title>
 </head>
 <body>
-  TEST
-<script src="dist/bundle.js"></script>
+  <div class="chart"></div>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
