--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Typescript</title>
 </head>
 <body>
-  <div class="chart"></div>
+  Hello World!!!
   <script src="dist/bundle.js"></script>
 </body>
 </html>
